--- a/apps/gauzy/src/app/pages/reports/weekly-time-reports/weekly-time-reports/weekly-time-reports.component.scss
+++ b/apps/gauzy/src/app/pages/reports/weekly-time-reports/weekly-time-reports/weekly-time-reports.component.scss
@@ -21,6 +21,11 @@
 }
 
 @include respond(lg) {
+    :host {
+        .employee-column {
+            margin-right: 0;
+        }
+    }
     .weekly-main-header {
         display: none;
     }
